@@ -42,8 +42,12 @@ class StoreScanner implements KeyValueScanner, InternalScanner, ChangedReadersOb
   private boolean cacheBlocks;
 
   // Used to indicate that the scanner has closed (see HBASE-1107)
+  // Doesnt need to be volatile because it's always accessed via synchronized methods
   private boolean closing = false;
   private final boolean isGet;
+
+  // if heap == null and lastTop != null, you need to reseek given the key below
+  private KeyValue lastTop = null;
 
   /**
    * Opens a scanner across memstore, snapshot, and all StoreFiles.
@@ -51,7 +55,7 @@ class StoreScanner implements KeyValueScanner, InternalScanner, ChangedReadersOb
    * @param store who we scan
    * @param scan the spec
    * @param columns which columns we are scanning
-   * @throws IOException 
+   * @throws IOException
    */
   StoreScanner(Store store, Scan scan, final NavigableSet<byte[]> columns) throws IOException {
     this.store = store;
@@ -125,7 +129,7 @@ class StoreScanner implements KeyValueScanner, InternalScanner, ChangedReadersOb
    */
   private List<KeyValueScanner> getScanners() throws IOException {
     // First the store file scanners
-    
+
     // TODO this used to get the store files in descending order,
     // but now we get them in ascending order, which I think is
     // actually more correct, since memstore get put at the end.
@@ -142,7 +146,7 @@ class StoreScanner implements KeyValueScanner, InternalScanner, ChangedReadersOb
   /*
    * @return List of scanners to seek, possibly filtered by StoreFile.
    */
-  private List<KeyValueScanner> getScanners(Scan scan, 
+  private List<KeyValueScanner> getScanners(Scan scan,
       final NavigableSet<byte[]> columns) throws IOException {
     // First the store file scanners
     List<StoreFileScanner> sfScanners = StoreFileScanner
@@ -152,7 +156,7 @@ class StoreScanner implements KeyValueScanner, InternalScanner, ChangedReadersOb
 
     // exclude scan files that have failed file filters
     for(StoreFileScanner sfs : sfScanners) {
-      if (isGet && 
+      if (isGet &&
           !sfs.getHFileScanner().shouldSeek(scan.getStartRow(), columns)) {
         continue; // exclude this hfs
       }
@@ -165,6 +169,15 @@ class StoreScanner implements KeyValueScanner, InternalScanner, ChangedReadersOb
   }
 
   public synchronized KeyValue peek() {
+    try {
+      checkReseek();
+    } catch (IOException e) {
+      throw new RuntimeException("IOE conversion", e);
+    }
+    if (this.heap == null) {
+      return null;
+    }
+
     return this.heap.peek();
   }
 
@@ -179,10 +192,18 @@ class StoreScanner implements KeyValueScanner, InternalScanner, ChangedReadersOb
     // under test, we dont have a this.store
     if (this.store != null)
       this.store.deleteChangedReaderObserver(this);
-    this.heap.close();
+    if (this.heap != null)
+      this.heap.close();
   }
 
   public synchronized boolean seek(KeyValue key) throws IOException {
+    if (this.heap == null) {
+
+      List<KeyValueScanner> scanners = getScanners();
+
+      heap = new KeyValueHeap(scanners, store.comparator);
+    }
+
     return this.heap.seek(key);
   }
 
@@ -194,11 +215,22 @@ class StoreScanner implements KeyValueScanner, InternalScanner, ChangedReadersOb
    */
   public synchronized boolean next(List<KeyValue> outResult, int limit) throws IOException {
     //DebugPrint.println("SS.next");
+
+    checkReseek();
+
+    // if the heap was left null, then the scanners had previously run out anyways, close and
+    // return.
+    if (this.heap == null) {
+      close();
+      return false;
+    }
+
     KeyValue peeked = this.heap.peek();
     if (peeked == null) {
       close();
       return false;
     }
+
     matcher.setRow(peeked.getRow());
     KeyValue kv;
     List<KeyValue> results = new ArrayList<KeyValue>();
@@ -265,17 +297,37 @@ class StoreScanner implements KeyValueScanner, InternalScanner, ChangedReadersOb
   // Implementation of ChangedReadersObserver
   public synchronized void updateReaders() throws IOException {
     if (this.closing) return;
-    KeyValue topKey = this.peek();
-    if (topKey == null) return;
 
-    List<KeyValueScanner> scanners = getScanners();
+    // this could be null.
+    this.lastTop = this.peek();
 
-    // close the previous scanners:
+    //DebugPrint.println("SS updateReaders, topKey = " + lastTop);
+
+    // close scanners to old obsolete Store files
     this.heap.close(); // bubble thru and close all scanners.
     this.heap = null; // the re-seeks could be slow (access HDFS) free up memory ASAP
 
+    // Let the next() call handle re-creating and seeking
+  }
+
+  private void checkReseek() throws IOException {
+    if (this.heap == null && this.lastTop != null) {
+
+      reseek(this.lastTop);
+      this.lastTop = null; // gone!
+    }
+    // else dont need to reseek
+  }
+
+  private void reseek(KeyValue lastTopKey) throws IOException {
+    if (heap != null) {
+      throw new RuntimeException("StoreScanner.reseek run on an existing heap!");
+    }
+
+    List<KeyValueScanner> scanners = getScanners();
+
     for(KeyValueScanner scanner : scanners) {
-      scanner.seek(topKey);
+      scanner.seek(lastTopKey);
     }
 
     // Combine all seeked scanners with a heap
@@ -284,6 +336,6 @@ class StoreScanner implements KeyValueScanner, InternalScanner, ChangedReadersOb
     // Reset the state of the Query Matcher and set to top row
     matcher.reset();
     KeyValue kv = heap.peek();
-    matcher.setRow((kv == null ? topKey : kv).getRow());
+    matcher.setRow((kv == null ? lastTopKey : kv).getRow());
   }
 }
