@@ -377,6 +377,7 @@ Release 0.21.0 - Unreleased
    HBASE-2614  killing server in TestMasterTransitions causes NPEs and test deadlock
    HBASE-2615  M/R on bulk imported tables
    HBASE-2676  TestInfoServers should use ephemeral ports
+   HBASE-2616  TestHRegion.testWritesWhileGetting flaky on trunk
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
